Creacion pag Inicio y pag Menu

--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -24,7 +24,19 @@
         </a>
 
         <nav class="navMenu">
-            
+            <ul>
+                <li><a href="#Participantes" class="li_navMenu">PARTICIPANTES</a></li>
+                <li><a href="#UnidadFamiliar" class="li_navMenu">UNIDAD FAMILIAR</a></li>
+                <li><a href="#Ayuda" class="li_navMenu">AYUDA</a></li>
+            </ul>
+        </nav>
+        <div class="divPerfil">
+            <div class="iconoGrande">
+                <img src="../imagenes/user-circle.svg" />
+            </div>
+            <!--PARA SALIR DE LA APLICACION-->
+            <img class="iconoPeq" src="../imagenes/logout.svg"/>
+        </div>
     </header>
 
 </body>
