menu principal htm

--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -35,7 +35,7 @@
                 <img src="../imagenes/user-circle.svg" />
             </div>
             <!--PARA SALIR DE LA APLICACION-->
-            <img class="iconoPeq" src="../imagenes/logout.svg"/>
+            <img class="iconoPeq" name="salir" src="../imagenes/logout.svg"/>
         </div>
     </header>
 
