formulario nuevoParticipante.html

--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -25,7 +25,7 @@
 
         <nav class="navMenu">
             <ul>
-                <li><a href="#Participantes" class="li_navMenu">PARTICIPANTES</a></li>
+                <li><a href="/pagNuevoParticipante" class="li_navMenu">PARTICIPANTES</a></li>
                 <li><a href="#UnidadFamiliar" class="li_navMenu">UNIDAD FAMILIAR</a></li>
                 <li><a href="#Ayuda" class="li_navMenu">AYUDA</a></li>
             </ul>
