--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -60,13 +60,13 @@
                     <option value="divorciado">Divorciado/a</option>
                     <option value="viudo">Viudo/a</option>                    
                 </select>
-                <label for="idPaisNacimiento">País de nacimiento</label>
-                <select id="idPaisNacimiento" name="idPaisNacimiento" required>
+                <label for="paisNacimiento">País de nacimiento</label>
+                <select id="paisNacimiento" name="paisNacimiento" required>
                     <option value="espana">España</option>
                     <option value="francia">Francia</option>             
                 </select>
-                <label for="idPaisNacimiento">País de nacionalidad</label>
-                <select id="idPaisNacionalidad" name="idPaisNacionalidad" required>
+                <label for="paisNacionalidad">País de nacionalidad</label>
+                <select id="paisNacionalidad" name="paisNacionalidad" required>
                     <option value="espana">España</option>
                     <option value="francia">Francia</option>             
                 </select>
