Preparada la recogida de datos para nuevos participantes2

--- a/public/views/unidadFamiliar.html
+++ b/public/views/unidadFamiliar.html
@@ -23,7 +23,7 @@
                                 
                 <h3><strong>¿Pertenece a alguna unidad familiar existente?</strong></h3>
 
-                <input type="radio" name="existeUD" value="0">Si</input>
+                <input type="radio" name="existeUD" value="0">Sí</input>
                 <input type="radio" name="existeUD" value="1" >No</input>
                 
                 <label for="puestoFamiliar">Puesto que ocupa en la unidad familiar</label>
