Arreglando errores varios con respecto al commit anterior

--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -62,7 +62,7 @@
                         <option value="viudo">Viudo/a</option>
                     </select>
                     <label for="paisNacimiento">País de nacimiento</label>
-                    <input type="text" id="paisNacionalidad" name="ciudad" placeholder="..." required />
+                    <input type="text" id="paisNacimiento" name="ciudad" placeholder="..." required />
                     </select>
                     <label for="paisNacionalidad">País de nacionalidad</label>
                         <input type="text" id="paisNacionalidad" name="ciudad" placeholder="..." required />
