--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -77,7 +77,7 @@
 
                     <label for="empadronamiento">Empadronamiento</label>
                     <input type="radio" name="empadronamiento" value="0">Sí</input>
-                    <input type="radio" name="empadronamiento" value="1">No</input>
+                    <input type="radio" name="empadronamiento" value="1" checked>No</input>
 
                     <label for="email">Correo electrónico</label>
                     <input type="email" id="email" name="email" placeholder="..." required />
