--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -20,7 +20,7 @@
     <!------------------------------------------------------->
     <header>
         <a href="#">
-            <img class="logo" src="./imagenes/logoMH.jpg" />
+            <img class="logo" src="./imagenes/logo_movilidad_humana.png" width="20%"/>
         </a>
 
         <nav class="navMenu">
