Ajustes varios en los HTML

--- a/public/views/nuevaUnidadFamiliar.html
+++ b/public/views/nuevaUnidadFamiliar.html
@@ -42,7 +42,7 @@
                     <button type="button" id="comprobar">Comprobar</button>
                     <input type="reset" value="Borrar" />
                     <a href="/pagNuevaSalud">Siguiente</a>
-                    <a href="/pagNuevoParticipante">Anterior</a>
+                    <a href="/pagUnidadFamiliar">Anterior</a>
                 </div>
             </form>
         </section>
