--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -85,7 +85,7 @@
 
                         <div class="botones-form">
                             <button type="button" id="comprobar">Comprobar</button>
-                            <input type="reset" value="Borrar" />
+                            <input type="reset" id="borrar" value="Borrar" />
                             <a id="siguiente" href="/pagUnidadFamiliar">Siguiente</a>
                         </div>
                         <p id="resultado"></p>
