--- a/public/views/unidadFamiliar.html
+++ b/public/views/unidadFamiliar.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo Participante</title>
-    <script type="module" async src="./javaScript/index.js"></script>
+    <script type="module" async src="./javaScript/unidadFamiliar/index.js"></script>
     <link href="./css/estiloMenu.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,20 +24,18 @@
                 <h3><strong>¿Pertenece a alguna unidad familiar existente?</strong></h3>
 
                 <input type="radio" name="existeUD" value="0">Sí</input>
-                <input type="radio" name="existeUD" value="1">No</input>
+                <input type="radio" name="existeUD" value="1" checked>No</input>
 
                 <label for="puestoFamiliar">Puesto que ocupa en la unidad familiar</label>
                 <input type="text" id="puestoFamiliar" name="puestoFamiliar" placeholder="..." required />
 
-
-
-
                 <div class="botones-form">
                     <button type="button" id="comprobar">Comprobar</button>
                     <input type="reset" value="Borrar" />
-                    <a href="/pagNuevaUnidadFamiliar">Siguiente</a>
                     <a href="/pagNuevoParticipante">Anterior</a>
+                    <a id="siguiente" href="/pagNuevaUnidadFamiliar">Siguiente</a>
                 </div>
+                <p id="resultado"></p>
             </form>
         </section>
 
