diseño del formulario de los datos personales de nuevo participante

--- a/public/views/menu.html
+++ b/public/views/menu.html
@@ -19,25 +19,36 @@
     <!-----------------------   HEADER   -------------------->
     <!------------------------------------------------------->
     <header>
-        <a href="#">
-            <img class="logo" src="./imagenes/logo_movilidad_humana.png" width="20%"/>
-        </a>
-
-        <nav class="navMenu">
-            <ul>
-                <li><a href="/pagNuevoParticipante" class="li_navMenu">PARTICIPANTES</a></li>
-                <li><a href="#UnidadFamiliar" class="li_navMenu">UNIDAD FAMILIAR</a></li>
-                <li><a href="#Ayuda" class="li_navMenu">AYUDA</a></li>
-            </ul>
-        </nav>
+        <div>
+            <a class="imgLogo" href="#">
+                <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
+            </a>
+        </div>
+        <div>
+            <nav class="navMenu">
+                <ul>
+                    <li><a href="/pagNuevoParticipante" class="li_navMenu">PARTICIPANTES</a></li>
+                    <li><a href="#UnidadFamiliar" class="li_navMenu">UNIDAD FAMILIAR</a></li>
+                    <li><a href="#Ayuda" class="li_navMenu">AYUDA</a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="divPerfil">
             <div class="iconoGrande">
                 <img src="../imagenes/user-circle.svg" />
             </div>
             <!--PARA SALIR DE LA APLICACION-->
-            <img class="iconoPeq" name="salir" src="../imagenes/logout.svg"/>
+            <img class="iconoPeq" name="salir" src="../imagenes/logout.svg" />
         </div>
     </header>
+
+    <main>
+        
+    </main>
+
+    <footer>
+        © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
+    </footer>
 
 </body>
 
