--- a/public/css/estiloLogin.css
+++ b/public/css/estiloLogin.css
@@ -1,117 +1,118 @@
 html {
-    height: 100%;
-    width: 100%;
-    scroll-behavior: smooth;
-  }
-  
-  * {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  body {
-    color: #ca92e4;
-    font-family: 'Comfortaa';
-    font-size: 16px;
-    font-weight: lighter;
-  }
-
-
-  .divLogo{
-    display: flex;
-    justify-content: center;
-  }
-
-  .logo{
-    margin-top: -80px;
-    width: 40%;
-  }
-
-  main{
-    margin-top: -100px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .main-content{
-    margin: 44px 100px;
-    padding: 40px;
-    border: 2px solid #ca92e4;
-    border-radius: 10px;
-    box-sizing: content-box;
-    box-shadow: 10px 5px 5px #8b3eae;
-  }
-
-  h2{
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
-  }
-
-  form{
-    display: flex;
-    justify-content: center;
-  }
-  
-  .inputForm{    
-    font-family: 'Roboto';
-    padding: 16px 24px;
-    margin-top: 10px;
-    margin-bottom: 24px;
-    border: 1px solid #ca92e4;
-    border-radius: 5px;
-    box-shadow: 10px 5px 5px #8b3eae;
-  }
-
-  ul{
-    list-style: none;
-  }
-
-  li{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .botones-form{
-    display: flex;
-    gap:20px;
-  }
-
-  .btnes {
-    display: flex;
-    justify-content: center;
-    background-color: #ca92e4;
-    color: white;
-    text-decoration: none;
-    font-family: 'Comfortaa';
-    font-size: 16px;
-    font-weight: bolder;
-    border-radius: 3px;
-    border: 1px solid #8b3eae;
-    height: 40px;
-    width: 120px;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-
-.olvidoPwd{
-    color: #ca92e4;
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100%;
+  width: 100%;
+  scroll-behavior: smooth;
 }
 
-  footer{
-    font-family: 'Roboto';
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-    height: 30px;
-    background-color: #ca92e4;
-    color: white;
-    align-items: center;
-  }
-  
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  color: #af27ce;
+  font-family: 'Comfortaa';
+  font-size: 16px;
+}
+
+.imgLogo {
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  width: 250px;
+}
+
+main {
+  margin-bottom: 80px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.main-content {
+  margin: 44px 100px;
+  padding: 40px;
+  border-top: 2px solid #af27ce;
+  border-bottom: 2px solid #af27ce;
+  /* border: 2px solid #af27ce;
+    border-radius: 10px;
+    box-sizing: content-box;
+    box-shadow: 10px 5px 5px #8b3eae; */
+}
+
+h2 {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+.inputForm {
+  font-family: 'Roboto';
+  padding: 16px 24px;
+  margin-top: 10px;
+  margin-bottom: 24px;
+  border: 1px solid #af27ce;
+  /*border-radius: 5px;*/
+  box-shadow: 10px 5px 5px #8b3eae;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.botones-form {
+  display: flex;
+  gap: 20px;
+}
+
+.btnes {
+  display: flex;
+  justify-content: center;
+  background-color: #af27ce;
+  color: white;
+  text-decoration: none;
+  font-family: 'Comfortaa';
+  font-size: 16px;
+  font-weight: bolder;
+  border-radius: 3px;
+  border: 1px solid #8b3eae;
+  height: 40px;
+  width: 120px;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.olvidoPwd {
+  color: #af27ce;
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  font-family: 'Roboto';
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+  height: 30px;
+  background-color: #af27ce;
+  color: white;
+  align-items: center;
+}
