--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuevo Participante</title>
     <script type="module" async src="./javaScript/addParticipantes/index.js"></script>
-    <link href="./css/estiloMenu.css" rel="stylesheet" type="text/css" />
+    <link href="./css/estiloParticipante.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,84 +15,132 @@
 </head>
 
 <body>
-    <header class="divCuerpo">
+    <header>
+        <a class="imgLogo">
+            <img class="logo" src="../imagenes/logo_movilidad_humana.png" />
+        </a>
+    </header>
+    <main class="main-content">
         <section class="datosPersonales">
             <h2>FICHA DE ACOGIDA</h2>
 
             <form id="form_nuevoPart" action="" method="post">
 
-                <label for="fAcogida">Fecha de acogida</label>
-                <input type="date" id="f_Acogida" name="fechaAcogida" placeholder="Introduce la fecha de acogida..."
-                    required />
+                <div class="div_bloque">
+                    <label for="proteccionDatos">¿Ha firmado el documento de protección de datos?</label>
 
-                <h3><strong>Datos personales</strong></h3>
-
-                <label for="proteccionDatos">Documento de protección de datos</label>
-                <input type="radio" name="proteccionDatos" value="0">Sí</input>
-                <input type="radio" name="proteccionDatos" value="1" checked>No</input>
-
-                <div id="contFormulario">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" id="nombre" name="nombre" placeholder="..." required />
-                    <label for="apellido1">Primer apellido</label>
-                    <input type="text" id="apellido1" name="apellido1" placeholder="..." required />
-                    <label for="apellido2">Segundo apellido</label>
-                    <input type="text" id="apellido2" name="apellido2" placeholder="..." required />
-                    <label for="dni">Documento de identidad (especifica si es DNI, NIE, Pasaporte o TIE)</label>
-                    <input type="text" id="dni" name="dni" placeholder="..." required />
-                    <label for="genero">Identidad de género</label>
-                    <select id="genero" name="genero" required>
-                        <option value="Hombre">Hombre</option>
-                        <option value="Mujer">Mujer</option>
-                        <option value="noContesto">Paso palabra</option>
-                        <option value="otro">Otro</option>
-                    </select>
-
-                    <label for="fechNac">Fecha de nacimiento</label>
-                    <input type="date" id="fechaNac" name="fechaNac" placeholder="..." required />
-                    <label for="fechaEspana">Fecha de llegada a España</label>
-                    <input type="date" id="fechaEspana" name="fechaEspana" placeholder="..." required />
-                    <label for="estCivil">Estado civil</label>
-                    <select id="estadoCivil" name="estadoCivil" required>
-                        <option value="solero">Soltero/a</option>
-                        <option value="parejaHecho">Pareja de hecho</option>
-                        <option value="casado">Casado/a</option>
-                        <option value="separado">Separado/a</option>
-                        <option value="divorciado">Divorciado/a</option>
-                        <option value="viudo">Viudo/a</option>
-                    </select>
-                    <label for="paisNacimiento">País de nacimiento</label>
-                    <input type="text" id="paisNacimiento" name="ciudad" placeholder="..." required />
-                    </select>
-                    <label for="paisNacionalidad">País de nacionalidad</label>
-                        <input type="text" id="paisNacionalidad" name="ciudad" placeholder="..." required />
-                    </select>
-
-                    <label for="direccion">Dirección completa</label>
-                    <input type="text" id="direccion" name="direccion" placeholder="..." required />
-                    <label for="ciudad">Ciudad</label>
-                    <input type="text" id="ciudad" name="ciudad" placeholder="..." required />
-                    <label for="telefono">Teléfono</label>
-                    <input type="tel" id="telefono" name="telefono" placeholder="..." required />
-
-                    <label for="empadronamiento">Empadronamiento</label>
-                    <input type="radio" name="empadronamiento" value="0">Sí</input>
-                    <input type="radio" name="empadronamiento" value="1" checked>No</input>
-
-                    <label for="email">Correo electrónico</label>
-                    <input type="email" id="email" name="email" placeholder="..." required />
+                    <div class="divRadioButton">
+                        <input class="divRadioButton" type="radio" name="proteccionDatos" value="0">Sí</input>
+                        <input class="divRadioButton" type="radio" name="proteccionDatos" value="1" checked>No</input>
+                    </div>
                 </div>
 
-                        <div class="botones-form">
-                            <button type="button" id="comprobar">Comprobar</button>
-                            <input type="reset" id="borrar" value="Borrar" />
-                            <a id="siguiente" href="/pagUnidadFamiliar">Siguiente</a>
+                <div id="contFormulario" class="contFormulario">
+                    <h3>Datos personales</h3>
+                    <div class="div_bloque">
+                        <label for="fAcogida">Fecha de acogida</label>
+                        <input class="inputTexto" type="date" id="f_Acogida" name="fechaAcogida"
+                            placeholder="Introduce la fecha de acogida..." required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="nombre">Nombre</label>
+                        <input class="inputTexto" type="text" id="nombre" name="nombre" placeholder="..." required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="apellido1">Primer apellido</label>
+                        <input class="inputTexto" type="text" id="apellido1" name="apellido1" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="apellido2">Segundo apellido</label>
+                        <input class="inputTexto" type="text" id="apellido2" name="apellido2" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="dni">Documento de identidad (especifica si es DNI, NIE, Pasaporte o TIE)</label>
+                        <input class="inputTexto" type="text" id="dni" name="dni" placeholder="..." required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="genero">Identidad de género</label>
+                        <select class="inputTexto" id="genero" name="genero" required>
+                            <option value="Hombre">Hombre</option>
+                            <option value="Mujer">Mujer</option>
+                            <option value="noContesto">Paso palabra</option>
+                            <option value="otro">Otro</option>
+                        </select>
+                    </div>
+                    <div class="div_bloque">
+                        <label for="fechNac">Fecha de nacimiento</label>
+                        <input class="inputTexto" type="date" id="fechaNac" name="fechaNac" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="fechaEspana">Fecha de llegada a España</label>
+                        <input class="inputTexto" type="date" id="fechaEspana" name="fechaEspana" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="estCivil">Estado civil</label>
+                        <select class="inputTexto" id="estadoCivil" name="estadoCivil" required>
+                            <option value="solero">Soltero/a</option>
+                            <option value="parejaHecho">Pareja de hecho</option>
+                            <option value="casado">Casado/a</option>
+                            <option value="separado">Separado/a</option>
+                            <option value="divorciado">Divorciado/a</option>
+                            <option value="viudo">Viudo/a</option>
+                        </select>
+                    </div>
+                    <div class="div_bloque">
+                        <label for="paisNacimiento">País de nacimiento</label>
+                        <input class="inputTexto" type="text" id="paisNacimiento" name="ciudad" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="paisNacionalidad">País de nacionalidad</label>
+                        <input class="inputTexto" type="text" id="paisNacionalidad" name="ciudad" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="direccion">Dirección completa</label>
+                        <input class="inputTexto" type="text" id="direccion" name="direccion" placeholder="..."
+                            required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="ciudad">Ciudad</label>
+                        <input class="inputTexto" type="text" id="ciudad" name="ciudad" placeholder="..." required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="telefono">Teléfono</label>
+                        <input class="inputTexto" type="tel" id="telefono" name="telefono" placeholder="..." required />
+                    </div>
+                    <div class="div_bloque">
+                        <label for="empadronamiento">Empadronamiento</label>
+                        <div class="divRadioButton">
+                            <input class="divRadioButton" type="radio" name="empadronamiento" value="0">Sí</input>
+                            <input class="divRadioButton" type="radio" name="empadronamiento" value="1" checked>No</input>
                         </div>
-                        <p id="resultado"></p>
+                    </div>
+
+                    <div class="div_bloque">
+                        <label for="email">Correo electrónico</label>
+                        <input class="inputTexto" type="email" id="email" name="email" placeholder="..." required />
+                    </div>
+
+                    <div class="botones-form">
+                        <button class="btnes" type="button" id="comprobar">Comprobar</button>
+                        <input class="btnes" type="reset" id="borrar" value="Borrar" />
+                        <a class="btnes" id="siguiente" href="/pagUnidadFamiliar">Siguiente</a>
+                    </div>
+                    <p id="resultado"></p>
             </form>
         </section>
 
-    </header>
+    </main>
+
+    <footer>
+        © 2024 Olga Gil y Lucía Morado. Todos los derechos reservados
+    </footer>
+
 </body>
 
 </html>
