Modificación diseño formulario nuevo participante

--- a/public/views/nuevoParticipante.html
+++ b/public/views/nuevoParticipante.html
@@ -44,21 +44,21 @@
                     </div>
                     <div class="div_bloque">
                         <label for="nombre">Nombre</label>
-                        <input class="inputTexto" type="text" id="nombre" name="nombre" placeholder="..." required />
+                        <input class="inputTexto" type="text" id="nombre" name="nombre" placeholder=" Introduzca el nombre" required />
                     </div>
                     <div class="div_bloque">
                         <label for="apellido1">Primer apellido</label>
-                        <input class="inputTexto" type="text" id="apellido1" name="apellido1" placeholder="..."
+                        <input class="inputTexto" type="text" id="apellido1" name="apellido1" placeholder=" Introduzca el primer apellido"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="apellido2">Segundo apellido</label>
-                        <input class="inputTexto" type="text" id="apellido2" name="apellido2" placeholder="..."
+                        <input class="inputTexto" type="text" id="apellido2" name="apellido2" placeholder=" Introduzca el segundo apellido"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="dni">Documento de identidad (especifica si es DNI, NIE, Pasaporte o TIE)</label>
-                        <input class="inputTexto" type="text" id="dni" name="dni" placeholder="..." required />
+                        <input class="inputTexto" type="text" id="dni" name="dni" placeholder=" Introduzca el documento de identidad" required />
                     </div>
                     <div class="div_bloque">
                         <label for="genero">Identidad de género</label>
@@ -71,12 +71,12 @@
                     </div>
                     <div class="div_bloque">
                         <label for="fechNac">Fecha de nacimiento</label>
-                        <input class="inputTexto" type="date" id="fechaNac" name="fechaNac" placeholder="..."
+                        <input class="inputTexto" type="date" id="fechaNac" name="fechaNac" placeholder=" Introduzca la fecha de nacimiento"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="fechaEspana">Fecha de llegada a España</label>
-                        <input class="inputTexto" type="date" id="fechaEspana" name="fechaEspana" placeholder="..."
+                        <input class="inputTexto" type="date" id="fechaEspana" name="fechaEspana" placeholder=" Introduzca la fecha de llegada a España"
                             required />
                     </div>
                     <div class="div_bloque">
@@ -92,26 +92,26 @@
                     </div>
                     <div class="div_bloque">
                         <label for="paisNacimiento">País de nacimiento</label>
-                        <input class="inputTexto" type="text" id="paisNacimiento" name="ciudad" placeholder="..."
+                        <input class="inputTexto" type="text" id="paisNacimiento" name="ciudad" placeholder=" Introduzca el país de nacimiento"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="paisNacionalidad">País de nacionalidad</label>
-                        <input class="inputTexto" type="text" id="paisNacionalidad" name="ciudad" placeholder="..."
+                        <input class="inputTexto" type="text" id="paisNacionalidad" name="ciudad" placeholder=" Introduzca el país de nacionalidad"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="direccion">Dirección completa</label>
-                        <input class="inputTexto" type="text" id="direccion" name="direccion" placeholder="..."
+                        <input class="inputTexto" type="text" id="direccion" name="direccion" placeholder=" Introduzca la dirección"
                             required />
                     </div>
                     <div class="div_bloque">
                         <label for="ciudad">Ciudad</label>
-                        <input class="inputTexto" type="text" id="ciudad" name="ciudad" placeholder="..." required />
+                        <input class="inputTexto" type="text" id="ciudad" name="ciudad" placeholder=" Introduzca la ciudad" required />
                     </div>
                     <div class="div_bloque">
                         <label for="telefono">Teléfono</label>
-                        <input class="inputTexto" type="tel" id="telefono" name="telefono" placeholder="..." required />
+                        <input class="inputTexto" type="tel" id="telefono" name="telefono" placeholder=" Introduzca el teléfono" required />
                     </div>
                     <div class="div_bloque">
                         <label for="empadronamiento">Empadronamiento</label>
@@ -123,7 +123,7 @@
 
                     <div class="div_bloque">
                         <label for="email">Correo electrónico</label>
-                        <input class="inputTexto" type="email" id="email" name="email" placeholder="..." required />
+                        <input class="inputTexto" type="email" id="email" name="email" placeholder=" Introduzca el correo electrónico" required />
                     </div>
 
                     <div class="botones-form">
